<feat: refactored annotation processor> <feat: converters path using graph-like structure> <breaking: specialized OBJECT into MESSAGE and ENUM>